--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "body-parser": "^1.17.1",
         "chai": "^3.5.0",
         "mocha": "^3.2.0",
+        "express": "^4.16.3",
         "mocha-jenkins-reporter": "^0.3.7",
         "supertest": "^3.0.0"
     },
     "scripts": {
         "prestart": "npm install;",
-        "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 5000 --colors --reporter mocha-jenkins-reporter || true"
+        "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 5000 --colors --reporter mocha-jenkins-reporter || true",
+        "docker": "docker build -t gerardo-rest-api-supertest . && docker-compose up"
     },
     "repository": {
         "type": "git",
