--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
     "name": "rest-api-testing-framework",
     "version": "1.0.0",
-    "license": "UNLICENSED",
+    "license": "MIT",
     "description": "Example of a Rest-API Framework Testing using Mocha, Chai and Supertest",
     "author": "Gerardo Prieto",
     "dependencies": {
         "async": "^2.6.1",
         "body-parser": "^1.17.1",
         "chai": "^3.5.0",
+        "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "mocha": "^3.2.0",
         "mocha-jenkins-reporter": "^0.3.7",
-        "supertest": "^3.0.0"
+        "supertest": "^3.0.0",
+        "tv4": "^1.3.0"
     },
     "scripts": {
         "prestart": "npm install;",
         "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 20000 --colors --reporter mocha-jenkins-reporter || true",
-        "docker": "docker build -t gerardo-rest-api-supertest . && docker-compose up"
+        "docker": "docker build -t gerardo-rest-api-supertest . && docker-compose up --build"
     },
     "repository": {
         "type": "git",
