--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
         "async": "^2.6.1",
         "body-parser": "^1.17.1",
         "chai": "^3.5.0",
-        "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "mocha": "^3.2.0",
         "mocha-jenkins-reporter": "^0.3.7",
-        "supertest": "^3.0.0",
-        "tv4": "^1.3.0"
+        "supertest": "^3.0.0"
     },
     "scripts": {
         "prestart": "npm install;",
